# ps4-umr

./: CMakeLists.txt  PKGBUILD  README  README.CENTOS  README.TESTVECTOR  gpu_hud.sh  testing_syntax.txt
cmake_modules/: FindLibDRM.cmake  FindNanoMsg.cmake  FindPCIAccess.cmake  GitVersion.cmake
comp/: Makefile  compiler.c
database/: aldebaran.asic  aldebaran.soc15  arcturus.asic  arcturus.soc15  beige_goby.asic  beige_goby.soc15  bonaire.asic  carrizo.asic  cyan_skillfish.asic  cyan_skillfish.soc15  dimgrey_cavefish.asic  dimgrey_cavefish.soc15  fiji.asic  gfx11_vm_test.asic  gfx11_vm_test.soc15  gladius.asic  green_sardine.asic  hainan.asic  hawaii.asic  kabini.asic  kaveri.asic  liverpool.asic  mullins.asic  navi10.asic  navi10.soc15  navi12.asic  navi12.soc15  navi14.asic  navi14.soc15  navy_flounder.asic  oland.asic  pci.did  picasso.asic  pitcairn.asic  polaris10.asic  polaris11.asic  polaris12.asic  raven1.asic  renoir.asic  renoir.soc15  (+17 more)
database/ip/: athub_1_0_0.reg  athub_1_8_0.reg  athub_2_0_0.reg  athub_2_1_0.reg  athub_3_0_0.reg  athub_4_1_0.reg  bif_3_0_0.reg  bif_4_1_0.reg  bif_5_0_0.reg  bif_5_1_0.reg  clk_10_0_2.reg  clk_11_0_0.reg  clk_11_0_1.reg  clk_11_5_0.reg  dce_10_0_0.reg  dce_11_0_0.reg  dce_11_2_0.reg  dce_12_0_0.reg  dce_6_0_0.reg  dce_8_0_0.reg  dcn_1_0_0.reg  dcn_2_0_0.reg  dcn_2_0_1.reg  dcn_2_1_0.reg  dcn_3_0_0.reg  dcn_3_0_1.reg  dcn_3_0_2.reg  dcn_3_0_3.reg  dcn_3_1_2.reg  dcn_3_1_4.reg  dcn_3_1_5.reg  dcn_3_1_6.reg  dcn_3_2_0.reg  dcn_3_2_1.reg  dcn_3_5_0.reg  dcn_3_6_0.reg  dcn_4_1_0.reg  df_1_7_0.reg  df_3_6_0.reg  df_4_15_0.reg  (+159 more)
demo/dgpu_pwm/: Makefile  main.c
demo/test_harness/: basic.th
doc/: CMakeLists.txt  umr.1
doc/sphinx/: Makefile
scripts/: build_auto.sh  dids.sh  diff_ip.sh  is_apu.sh  report.sh  umr-completion.bash
scripts/diag/: diag_functions.sh  dump_all_cpc_info.sh
src/: CMakeLists.txt  umr.h  umr_clock.h  umr_database_discovery.h  umr_discovery.h  umr_ih.h  umr_metrics.h  umr_mmio.h  umr_packet.h  umr_packet_hsa.h  umr_packet_mes.h  umr_packet_mqd.h  umr_packet_pm4.h  umr_packet_sdma.h  umr_packet_umsch.h  umr_packet_vcn.h  umr_packet_vpe.h  umr_rumr.h  umr_test_harness.h  umr_vm.h  umr_waves.h  umrapp.h
src/app/: CMakeLists.txt  clock.c  discovery.c  enum.c  ib_read.c  ib_read_file.c  main.c  navi10_ppt.c  power.c  pp_table.c  print.c  print_config.c  print_cpc.c  print_cpg.c  print_sdma.c  print_waves.c  profile.c  read_metrics.c  ring_read.c  ring_stream_read.c  runlist.c  scan.c  scan_log.c  scriptware.c  server.c  set_bit.c  set_reg.c  top.c  umr_gui.cpp  umr_lookup.c  vbios.c
src/app/gui/: buffer_object_panel.cpp  commands.c  drawable_area.h  info_panel.cpp  kernel_trace_event.cpp  kernel_trace_event.h  kms_panel.cpp  memory_debug_panel.cpp  memory_usage_panel.cpp  panels.h  power_panel.cpp  registers_panel.cpp  rings_panel.cpp  top_panel.cpp  waves_panel.cpp
src/app/gui/glad/include/glad/: glad.h
src/app/gui/glad/src/: glad.c
src/app/gui/imgui/: imgui.cpp  imgui.h  imgui_draw.cpp  imgui_internal.h  imgui_memory_editor.h  imgui_widgets.cpp
src/app/gui/parson/: CMakeLists.txt
src/app/inc/: smu_pptable_navi10.h  smu_v11_pptable_common.h
src/lib/: CMakeLists.txt  add_ip_block.c  apply_bank_address.c  apply_callbacks.c  bitfield_print.c  close_asic.c  create_mmio_accel.c  decode_metrics.c  discover_by_did.c  discover_by_ip_table.c  discover_by_name.c  discovery_table.c  dump_ib.c  find_ip.c  find_reg.c  free_asic_blocks.c  get_ip_rev.c  ih_decode_vectors.c  mmio.c  mqd_decode.c  packet_stream.c  pm4_decode_opcodes.c  pm4_lite.c  read_hsa_stream.c  read_mes_stream.c  read_pm4_stream.c  read_sdma_stream.c  read_umsch_stream.c  read_vcn_dec_stream.c  read_vcn_enc_stream.c  read_vpe_stream.c  read_vram.c  ring_decode.c  ring_is_halted.c  scan_config.c  scan_waves.c  sdma_decode_opcodes.c  shader_disasm.c  sq_cmd_halt_waves.c  testing_harness.c  (+4 more)
src/lib/database/: CMakeLists.txt  free_scan.c  match.c  open.c  read_asic.c  read_ip.c  read_soc15.c  scan.c
src/lib/import/: ac_vcn_dec.h  ac_vcn_enc.h
src/lib/lowlevel/: CMakeLists.txt
src/lib/lowlevel/linux/: CMakeLists.txt  build_discovery_entry_table.c  discover.c  enumerate_devices.c  gfxoff.c  mem.c  mmio.c  query_drm.c  read_gpr.c  read_gprwave.c  read_sensor.c  umr_clock.c  umr_free_asic.c  umr_read_ring_data.c  umr_shader_disasm.c  wave_status.c
src/lib/rumr/: CMakeLists.txt  buffer.c  client.c  rumr_serial_asic.c  tcp_comm.c  umr_server.c
src/test/: CMakeLists.txt  main.c  test_framework.c  test_framework.h  test_mmio.c  test_server.c  test_vm.c
test/: runtest.sh
test/kat/: hsa_test1.answer  hsa_test1.answer1  hsa_test1.cmd  hsa_test1.input  rs_kat_cezanne_test1.answer  rs_kat_cezanne_test1.answer2  rs_kat_cezanne_test1.answer3  rs_kat_cezanne_test1.answer4  rs_kat_cezanne_test1.answer5  rs_kat_cezanne_test1.cmd  rs_kat_cezanne_test1.txt  rs_kat_cezanne_test3.answer  rs_kat_cezanne_test3.answer2  rs_kat_cezanne_test3.answer3  rs_kat_cezanne_test3.answer4  rs_kat_cezanne_test3.answer5  rs_kat_cezanne_test3.cmd  rs_kat_cezanne_test3.txt  rs_kat_navi10_test2.answer  rs_kat_navi10_test2.answer2  rs_kat_navi10_test2.answer3  rs_kat_navi10_test2.answer4  rs_kat_navi10_test2.answer5  rs_kat_navi10_test2.answer6  rs_kat_navi10_test2.answer7  rs_kat_navi10_test2.answer8  rs_kat_navi10_test2.cmd  rs_kat_navi10_test2.txt  rs_kat_phoenix_test1.answer  rs_kat_phoenix_test1.answer2  rs_kat_phoenix_test1.answer3  rs_kat_phoenix_test1.cmd  rs_kat_phoenix_test1.txt  vcn_dec_ib_test1.answer  vcn_dec_ib_test1.answer1  vcn_dec_ib_test1.cmd  vcn_dec_ib_test1.txt  vcn_dec_ib_test2.answer  vcn_dec_ib_test2.cmd  vcn_dec_ib_test2.txt  (+5 more)
test/vm/: direct_vm_test11.envdef  direct_vm_test16.envdef  direct_vm_test18.envdef  direct_vm_test3.envdef  (+5 more)
test_inputs/: direct_vm_test0.envdef  direct_vm_test1.envdef  direct_vm_test10.envdef  direct_vm_test12.envdef  direct_vm_test13.envdef  direct_vm_test14.envdef  direct_vm_test15.envdef  direct_vm_test17.envdef  direct_vm_test2.envdef  direct_vm_test5.envdef  direct_vm_test8.envdef  renoir_reg_only.envdef
(+26 files in other folders)
